--- a/index.html
+++ b/index.html
@@ -828,31 +828,35 @@
   <div class="container" id="content"><h2>Giovanna Vilaza</h2>
     <ul class="row text-center list-inline">
       <li>
-        <span><a href="https://www.linkedin.com/in/giovannavilaza" target="_blank"><i class="fa fa-linkedin-square pink"></i><b></b></a></span>
+        <span><a href="https://www.linkedin.com/in/giovannavilaza" target="_blank" data-toggle="tooltip" title="Linkedin" data-placement="bottom"><i class="fa fa-linkedin-square pink"></i><b></b></a></span>
       </li>
       <li>
-        <span><a href="https://github.com/giovilaza/" target="_blank"><i class="fa fa-github pink"></i><b></b></a></span>
+        <span><a href="https://github.com/giovilaza/" target="_blank" data-toggle="tooltip" title="Github" data-placement="bottom"><i class="fa fa-github pink"></i><b></b></a></span>
       </li>
       <li>
-        <span><a href="files/CV2017.pdf" target="_blank"><i class="fa fa-file-pdf-o pink"></i><b></b></a></span>
+        <span><a href="files/CV2017.pdf" target="_blank" data-toggle="tooltip" title="Curriculum" data-placement="bottom"><i class="fa fa-file-pdf-o pink"></i><b></b></a></span>
       </li>
-    </ul></div>
+    </ul>
+
+
+
+  </div>
 
 
   <!-- Header Menu -->
   <div class="container">
   <ul  class="nav nav-tabs" style="display:flex;justify-content:center;align-items:center;">
-    <li class="active"><a  href="#b0" data-toggle="tab" id="a0"><span class="glyphicon glyphicon-home"></span></a>
+    <li class="active"><a  href="#b0" data-toggle="tab" id="a0"><span class="glyphicon glyphicon-home" data-toggle="tooltip" title="Welcome" data-placement="top"></span></a>
     </li>
-	  <li><a href="#b2" data-toggle="tab" id="a2"><span class="glyphicon glyphicon-stats"></span></a>
+	  <li><a href="#b2" data-toggle="tab" id="a2"><span class="glyphicon glyphicon-stats" data-toggle="tooltip" title="Visualization" data-placement="top"></span></a>
 		</li>
-		<li><a href="#b3" data-toggle="tab" id="a3"><span class="glyphicon glyphicon-briefcase"></span></a>
+		<li><a href="#b3" data-toggle="tab" id="a3"><span class="glyphicon glyphicon-briefcase" data-toggle="tooltip" title="Business" data-placement="top"></span></a>
 		</li>
-		<li><a href="#b4" data-toggle="tab" id="a4"><span class="glyphicon glyphicon-phone"></span></a>
+		<li><a href="#b4" data-toggle="tab" id="a4"><span class="glyphicon glyphicon-phone" data-toggle="tooltip" title="Design" data-placement="top"></span></a>
 		</li>
-    <li><a href="#b5" data-toggle="tab" id="a5"><span class="glyphicon glyphicon-file"></span></a>
+    <li><a href="#b5" data-toggle="tab" id="a5"><span class="glyphicon glyphicon-file" data-toggle="tooltip" title="Writing" data-placement="top"></span></a>
 		</li>
-    <li><a  href="#b1" data-toggle="tab" id="a1"><span class="glyphicon glyphicon-education"></span></a>
+    <li><a  href="#b1" data-toggle="tab" id="a1"><span class="glyphicon glyphicon-education" data-toggle="tooltip" title="About Me" data-placement="top"></span></a>
 		</li>
 		</ul>
 
@@ -901,11 +905,13 @@
 
 
           <div class="tab-pane fade" id="b1">
-            <h3> My journey </h3>
+            <h3> My Journey </h3>
             <div class="timeline">
-              <p>I was lucky to have lived in many places. This is a timeline of places I have already studied at.</p>
+              
+              <p>I feel happy to have lived in many places. This is a timeline of places I have already studied at.</p>
+
               <div class="container-fluid">
-                <img class="img-responsive" src="images/timeline16.png">
+                <img class="img-responsive" src="images/timeline162.png">
                 <!--div class="row">
 
                   <div class="col-md-6">
@@ -933,6 +939,9 @@
           <!-- Data Visualization -->
   				<div class="tab-pane fade" id="b2">
            <h3>Data Visualization</h3>
+           <div class="timeline">
+             <p>HTML, CSS, JavaScript, d3.js, Pixlr, Unity, Java</p>
+           </div>
               <div class="container-fluid" id="preview">
                 <div class="row">
                   <div class="col-md-3">
@@ -986,6 +995,9 @@
             <!-- Business Ideas -->
           <div class="tab-pane fade" id="b3">
             <h3>Business Projects</h3>
+            <div class="timeline">
+              <p>Ideation, brainstorming, Lean Model Canvas, marketing, user validation</p>
+            </div>
             <div class="container-fluid" id="preview">
               <div class="row">
                 <div class="col-md-3">
@@ -1038,6 +1050,9 @@
           <!-- Interactive Prototypes -->
           <div class="tab-pane fade" id="b4">
             <h3>Interaction Design</h3>
+            <div class="timeline">
+              <p>Personas, user journeys, prototyping, sketching, mock ups, UxPin, Balsamiq, evaluation</p>
+            </div>
             <div class="container-fluid">
               <div class="row">
 
@@ -1092,7 +1107,9 @@
           <!-- Academic Writing -->
           <div class="tab-pane fade" id="b5">
             <h3>Academic Writing</h3>
-
+            <div class="timeline">
+              <p>User Evaluation Report, research methods, published papers</p>
+            </div>
             <div class="container-fluid">
               <div class="row">
 
@@ -1150,10 +1167,21 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <script type="text/javascript" src="portfolio.js"></script>
+    <script>
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+      ga('create', 'UA-87399232-1', 'auto');
+      ga('send', 'pageview');
+
+    </script>
 
 
 <script>
 $(document).ready(function(){
+  $('[data-toggle="tooltip"]').tooltip();
   $('.multiple-items').slick({
     infinite: true,
     slidesToShow: 3,
