--- a/index.html
+++ b/index.html
@@ -873,7 +873,7 @@
                         <p>I am glad you are here. <br><br>
                           I am Giovanna Vilaza, a Brazilian student of Human Computer Interaction at UCL (London).
                           This portfolio is a selection of my favourite projects, most of them from last year.
-                          But one of the reasons I want to share my work is because I would love to hear it from you.
+                          But the reason why I want to share my work with you it is because I would love to hear it from you.
                           Any honest feedback, an inivitation for collaboration, an unexpected question, a job vacancy or just to say hi.<br><br>
                           Feel free to write me at: <a href="mailto:ucabnun@ucl.ac.uk?Subject=Contact" target="_top">ucabnun@ucl.ac.uk</a>
                           </p>
@@ -905,10 +905,12 @@
 
 
           <div class="tab-pane fade" id="b1">
-            <h3> My Journey </h3>
+            <h3> About Me</h3>
             <div class="timeline">
-              
-              <p>I feel happy to have lived in many places. This is a timeline of places I have already studied at.</p>
+
+              <p>Since I started my degree in Computer Science in Brazil, I have strived to pursue a high quality education.<br>
+              I have received scholarships to study abroad and these opportunities have shaped who I am today.<br>
+              This timeline shows the cities and universities I have had the opportunity to study in the last 7 years. </p>
 
               <div class="container-fluid">
                 <img class="img-responsive" src="images/timeline162.png">
@@ -940,7 +942,7 @@
   				<div class="tab-pane fade" id="b2">
            <h3>Data Visualization</h3>
            <div class="timeline">
-             <p>HTML, CSS, JavaScript, d3.js, Pixlr, Unity, Java</p>
+             <p>JavaScript, d3.js, HTML, CSS, Pixlr</p>
            </div>
               <div class="container-fluid" id="preview">
                 <div class="row">
@@ -996,7 +998,7 @@
           <div class="tab-pane fade" id="b3">
             <h3>Business Projects</h3>
             <div class="timeline">
-              <p>Ideation, brainstorming, Lean Model Canvas, marketing, user validation</p>
+              <p>Ideation, Lean Model Canvas, marketing, user validation, pitching</p>
             </div>
             <div class="container-fluid" id="preview">
               <div class="row">
@@ -1051,7 +1053,7 @@
           <div class="tab-pane fade" id="b4">
             <h3>Interaction Design</h3>
             <div class="timeline">
-              <p>Personas, user journeys, prototyping, sketching, mock ups, UxPin, Balsamiq, evaluation</p>
+              <p>Personas, scenarios, ketching, prototyping, smock ups, UxPin, Balsamiq, usability evaluation</p>
             </div>
             <div class="container-fluid">
               <div class="row">
@@ -1108,7 +1110,7 @@
           <div class="tab-pane fade" id="b5">
             <h3>Academic Writing</h3>
             <div class="timeline">
-              <p>User Evaluation Report, research methods, published papers</p>
+              <p>Evaluation report, research methods, published paper</p>
             </div>
             <div class="container-fluid">
               <div class="row">
