--- a/index.html
+++ b/index.html
@@ -982,7 +982,7 @@
                           </div>
 
                           <div class="col-md-3 card">
-                            <span><i class="fa fa-code" aria-hidden="true"></i><h2>Tools and Tech</h2><p>HTML, CSS, JavaScript, d3.js, Pixlr, UxPin, Unity Java</p></span>
+                            <span><i class="fa fa-code" aria-hidden="true"></i><h2>Tools and Tech</h2><p>HTML, CSS, JavaScript, d3.js, Bootstrap, Pixlr, Java</p></span>
                           </div>
 
                           <div class="col-md-3">
