--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
   <link rel="icon" href="favicon.ico">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
   <link rel="stylesheet" type="text/css" href="slick-1.6.0/slick/slick.css"/>
-  <link rel="stylesheet" href="https://cdnjs.com/libraries/1000hz-bootstrap-validator">
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
   <script type="text/javascript" src="slick-1.6.0/slick/slick.min.js"></script>
@@ -394,7 +393,7 @@
       <div class="modal-content">
         <div class="modal-header">
           <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-          <h4 class="modal-title" id="myModalLabel">SharedBall</mark></h4>
+          <h4 class="modal-title" id="myModalLabel">Shared Ball</mark></h4>
         </div>
         <div class="modal-body">
 
@@ -402,45 +401,52 @@
             <div class="row">
               <figure class="col-md-4">
                 <img class="img-responsive" src="images/projects/game3.png">
-                <figcaption>Online experiment</figcaption>
+                <figcaption>1: Online experiment</figcaption>
               </figure>
               <figure class="col-md-4">
                 <img class="img-responsive" src="images/projects/game4.png">
-                <figcaption>Questionnaire</figcaption>
+                <figcaption>2: Questionnaire</figcaption>
               </figure>
               <figure class="col-md-4">
                 <img class="img-responsive" src="images/projects/game5.png">
-                <figcaption>Paper published in SBGames</figcaption>
+                <figcaption>3: Paper published in SBGames</figcaption>
               </figure>
             </div>
           </div>
 
           <div class="journey">
 
-            <h4><mark> About</mark></h4>
-            <p>This paper is a project I did for the Bachelor Thesis I wrote when compelting my degree in Computer Science.
-            The topic tested Attribution of Responsibility and Sense of Agency using a game I designed and implemented using Unity.
-            This paper was published and presented at the SBGames Brazil 2014. </p>
+            <h4>About</h4>
+            <p>This paper is the project I did for my Bachelor Thesis, which got a distinction.
+            It investigated Attribution of Responsibility and Sense of Agency using a game I designed and implemented using Unity.
+            The project was made in collaboration with Prof. Pim Haselager and Prof. Louis Vuurpijl at Radboud Universitet, Nijmegen, Netherlands. In Brazil, my supervisor was Prof. Andre Campos.
+            This paper was <mark>published and presented</mark> at the SBGames Brazil 2014. </p>
 
-            <h4><mark> Abstract</mark></h4>
-          <p> Attribution of responsibility and sense of agency are key topics raised by situations in which control is shared between man and machine.
-            For example, when a failure occurs in a robotic surgery, causing permanent injuries to a patient, who should be blamed?
-            In order to investigate how individuals attribute responsibility and how they perceive agency, a game was used as a playful research tool.
-            The assumption is that a game may lead the player to behave more naturally, forgetting he is in a conducted experiment.
-            This paper presents the Shared Ball game, designed to simulate a situation of shared control.
-            It was hypothesised that users would display a self servicing bias behaviour when playing the game.
-            After conducting an experiment, the hypothesis showed to be consistent.
-            Knowledge acquired in this experiment can be beneficial to the construction of safer and more enjoyable technology, since that all possible abnormal conditions can never be fully predicted.
-            The use of adaptive and autonomous technology has to be accompanied by a debate on moral responsibility and ethical rules.
-          </p>
-          <h4><mark> Main topics</mark></h4>
-          <ul style="list-style-type:disc">
-            <li>Attribution of Responsibility</li>
-            <li>Sense of Agency</li>
-            <li>Unity games as a research method</li>
+            <h4>Process</h4>
+            <p>This was a project I did most on my own: I was responsible for proposing the research questions, doing the <mark>literature review</mark>, designing the game, analysing the results statistically and write the final paper.
+            My research interest was on how users perceived sharing control with an Artificial Intelligent (AI) agent. I came up with the idea of using a game so that we could engage more participants and the task would not be burden for them.
+            Then, I designed the commands to be partially under user control and partially under influence of an AI agents. I wanted to observe the behaviour of the users in the case they lose the game and who they would blame for that.
+            I coded the game in <mark>C#</mark> and I used the rendering engine <mark>Unity</mark>. I also <mark>designed a website</mark> <b>(Figure 1)</b> that included the game and the questionnaire <b>(Figure 2)</b> for my research.
+            The experiment was designed to be fun, intuitive and easy to complete, so that even users were not required any prior knowledge to play it.
+            After collecting data from the experiment I used minitab to conduct the <mark>inferential statistical</mark> tests.
+            </p>
 
+            <h4>Results</h4>
+            <p>Once I finished with the analysis I wrote the thesis and a paper, which I submitted it to SBGames 2014.
+              As it got accepted <b>(Figure 3)</b> I had to present my work in the conference to an audience of around 100 people. I also had to give the <mark>presentation in English</mark>.
+              I got a <mark>distinction mark</mark> for this project for my Bachelor Thesis as well.
+            </p>
 
-          </ul></div>
+            <h4>Learnings</h4>
+            <ul style="list-style-type:disc">
+              <li>Proposing a research question</li>
+              <li>Designing a quantitative experiment</li>
+              <li>Coding in C#</li>
+              <li>Using minitab and Unity</li>
+              <li>Writing a paper for a conference</li>
+              <li>Presenting research to a big audience (100 people)</li>
+            </ul>
+          </div>
         </div>
         <div class="modal-footer">
           <!--a class="info" data-dismiss="modal" href="#">close</a-->
@@ -457,7 +463,7 @@
       <div class="modal-content">
         <div class="modal-header">
           <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-          <h4 class="modal-title" id="myModalLabel">Evaluation Report</mark></h4>
+          <h4 class="modal-title" id="myModalLabel">Evaluation Report</h4>
         </div>
         <div class="modal-body">
           <div class="journey">
