--- a/index.html
+++ b/index.html
@@ -276,8 +276,6 @@
   </div>
   <!-- End -->
 
-
-
   <!-- Hello World -->
   <div class="modal fade" id="modalHello" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
     <div class="modal-dialog" role="document" id="modalHello">
@@ -291,47 +289,54 @@
           <div class="container-fluid">
             <div class="row">
               <figure class="col-md-4">
+                <img class="img-responsive" src="images/projects/advClass3.jpg">
+                <figcaption>1: Lecture by Fabio Franchino</figcaption>
+              </figure>
+              <figure class="col-md-4">
                 <img class="img-responsive" src="images/projects/advDesign3.jpg">
-                <figcaption>Team work</figcaption>
+                <figcaption>2: Team work</figcaption>
               </figure>
               <figure class="col-md-4">
                 <img class="img-responsive" src="images/projects/advFair3.jpg">
-                <figcaption>Exhibition Fair</figcaption>
+                <figcaption>3: Master Exhibition Fair</figcaption>
               </figure>
-              <figure class="col-md-4">
-                <img class="img-responsive" src="images/projects/advClass3.jpg">
-                <figcaption>Lecture by Fabio Franchino</figcaption>
-              </figure>
+
             </div>
           </div>
 
                 <div class="journey">
-                    <h4><mark> Context </mark></mark></h4>
+                    <h4>About</h4>
                     <p>This Summer I joined the workshop "Adventures in Data Visualization" at SUPSI, Lugano, Switzerland.
-                    The workshop was an intensive three days course with tutoring sessions and a practical task to be developed in groups.
-                    In this year edition, we were asked to explore Open Data datasets form Swiss organizations.
-                    We had to access, analyse and manpulate the data in order to transform it in a narrative flow and create an interactive experience.</p>
+                    The workshop was an intensive three days course with tutoring sessions from experienced professionals <b>(Figure 1)</b> and a group project.
+                    In this year edition, we were asked to explore <mark>Open Data</mark> datasets from Swiss organizations.
+                    We had to select, analyse and manipulate the data in order to transform it in a narrative flow and create an interactive experience.</p>
 
-                    <h4><mark> Process </mark></mark></h4>
-                    <p>
-                      The group formation took into account our strongest skills so that we could have a balanced team.
-                      My team had one member developing the d3.js, another one doing the front-end, a girl was responsible for the ux design
-                      and I was on the design part, but I also manipulaed a lot of data.
-                      I had to clean and re organize the tables that we found on the Open Data Swiss.
+                    <h4>Process</mark></h4>
+                    <p>I proposed a division in the team <b>(Figure 2) </b>so we could be more productive.
+                      Therefore, we had one member developing the d3.js, one doing the front-end, and another one responsible for wireframing.
+                      Most of the time I was peer coding in the <mark>front-end</mark>, because I wanted to learn more about <mark>Bootstrap</mark> and my team member was very good at it.
+                      I was doing some of the UX design too, I created <mark>sketches</mark> for the website flow and I chose the colour scheme.
+                      <mark>I had the idea of creating a quiz</mark>, asking users to guess the language of a quote, so I had to choose funny quotes and to create the interaction flow.
+                      I also manipulated a lot of data.
+                      I had to clean and re organize the tables that we found on the Open Data Swiss, because some of its data was not relevant for our project.
+                      I used <mark>Excel</mark> for that, because the task did not require a more complex approach.
+                      In the end, I did the <mark>usability and functionality test </mark>of the prototype and I passed the issues to my developer colleague.
                     </p>
-                    <h4><mark> Outcome </mark></mark></h4>
+                    <h4>Results</h4>
                     <p>
                       We called our project "an exploration into the linguistic immigration flows of Switzerland".
                       It displays the many languages spoken by the immigrants who arrived in Switzerland in 2014.
-                      By using the metaphor of colourful particles we wanted to express their diversity.
-                      The user interacts with the visualization through an informative quiz.
+                      By using the metaphor of colourful particles we wanted to express their diversity and the quiz was designed to engage more the users.
+                      We exposed it at the Master Fair <b>(Figure 3)</b> at SUPSI Lugano, among the thesis projects there.
+                      We also received an invitation from http://muda.co/zurich/ to have our project <mark>exhihited in Zurich</mark> this Fall.
                     </p>
-                  <h4><mark> Skills practiced </mark></mark></h4>
+                  <h4>Learnings</h4>
                   <ul style="list-style-type:disc">
-                    <li>Project Management</li>
+                    <li>Data Narratives</li>
+                    <li>Team work</li>
                     <li>Front-end (Bootstrap)</li>
-                    <li>Data Manipulation</li>
-                    <li>Storytelling</li>
+                    <li>Sketching scenarios</li>
+                    <li>Excel</li>
                   </ul>
                 </div>
                 </div>
@@ -549,43 +554,51 @@
           <div class="container-fluid">
             <div class="row">
               <figure class="col-md-4">
-                <img class="img-responsive" src="images/projects/ivisAward2.jpg">
-                <figcaption>C-Awards winners</figcaption>
-              </figure>
-              <figure class="col-md-4">
-                <img class="img-responsive" src="images/projects/ivisParty2.jpg">
-                <figcaption>C-Award party</figcaption>
-              </figure>
-              <figure class="col-md-4">
                 <img class="img-responsive" src="images/projects/ivisGroup2.jpg">
-                <figcaption>Group formation</figcaption>
+                <figcaption>1: Forming groups at class</figcaption>
+              </figure>
+              <figure class="col-md-4">
+                <img class="img-responsive" src="images/projects/soliddemo2.png">
+                <figcaption>2: Sunburst (d3.js)</figcaption>
+              </figure>
+              <figure class="col-md-4">
+                <img class="img-responsive" src="images/projects/ivisAward2.jpg">
+                <figcaption>3: C-Awards winners</figcaption>
               </figure>
             </div>
           </div>
 
           <div class="journey">
-            <h4><mark> Context</mark></h4>
-            <p>Solid was the final project for the course of Information Visualization (DH2321) at KTH.
+            <h4>About</h4>
+            <p>Solid was the final project for the course of Information Visualization (DH2321) at KTH <b>(Figure 1)</b>.
               We were given total freedom on technology, dataset and theme we wanted to explore.
               The goal was to create a visualization to help users to see, to understand and to create their own discussions about a particular topic.</p>
 
-              <h4><mark> Process</mark></h4>
-              <p>Given that the scope was really broad, we needed three brainstorming sessions until we chose an idea to work with.
-                The team consisted of nine Master students and we organised ourselves in smaller teams: design, data and coding.
-                I was responsible for coding the d3.js visualization.
+              <h4>Process</h4>
+              <p>
+                I was part of all the brainstomring sessions in which we explored different ideas and themes.
+                My main contribution to it was pointing out how to create a narrative out of the data, instead of merely plotting it to a visual representation.
+                Our team organised itself in three taks: webpage design, scraping data and coding the visualization.
+                I was responsible for bringing <mark>user centred design</mark> approaches to the project, so I created simplified personas of possible users to target, with their goals and needs.
+                Then, I wrote scenarios based on the data visulization framework of <mark>"overview, zoom, filter, details on demand"</mark>.
+                I also did some secondary research on similar projects to both help us to create something new and to serve as inspiration.
+                My main responsibility after that was to code the data visualization. At first, the designers wanted to use a Treemap, but after I implemented it, I found out that this visual strucutre was not representing the data in the correct way.
+                After some discussion, me and the designers decided to use a Sunburst <b>(Figure 2)</b> instead. I coded it using <mark>d3.js</mark> and the legend using d3-legend.js.
+                For the legend, I created a log scale so that the colours could be better distributed and the differences between nodes would look clearer.
+                Finally, I used the <mark>Wikipedia API</mark> to add a description box when the user clicked on a node of the Sunburst.
               </p>
-              <h4><mark> Outcome</mark></h4>
-          <p>  We created Solid with datajournalists in mind, to help them to discover interesting stories that the media might not give much attention to.
-            We combined two datasets to display the loss of disability-lost-life-years (DALYs) in comparison with what media covers.
-            DALYs do not represent death, but loss in quality of life due to avoidable causes.
-            This visualisation aims at showing the impact of DALYS around the world and it is commit to a transparent overview of the media coverage.
+              <h4>Results</h4>
+              <p> We created Solid for datajournalists and curious people, to help them to discover interesting stories that the media might not give much attention to.
+                We combined two datasets to display loss in quality of life due to avoidable causes (DALYs) in comparison with what media covers.
+                With this project we won three categories at <mark>C-Awards</mark> in Stockholm <b>(Figure 3)</b>: best Business Opportunity, Best Progress in Science and Best by Popular Vote.
+                We recently got contacted by <mark>Gapminder</mark> for a collaboration on their project about the same topic.
           </p>
-          <h4><mark> Skills practiced:</mark></h4>
+          <h4>Learnings</h4>
           <ul style="list-style-type:disc">
-            <li>Team work</li>
             <li>d3.js</li>
             <li>Wikipedia API</li>
-            <li>Scaling data</li>
+            <li>Log scale</li>
+            <li>Award competition</li>
 
           </ul></div>
         </div>
